welcome.lessons.welcome.loopwhile.WhileMoria.scala.error
Balin:2: error: Missing closing brace `}' assumed here
droite(); droite();
^Balin:10: error: ';' expected but 'else' found.
else { droite();avance();gauche();avance(); }
^